k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-dev
  labels:
    name: actions-dev
    environment: development
