k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actions-app
  labels:
    app: actions
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: actions
  template:
    metadata:
      labels:
        app: actions
        version: v1
        deployedAt: "1767191510"
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: actions
        image: shinobislayer/actions:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
      restartPolicy: Always
