k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actions-service
  labels:
    app: actions
spec:
  type: ClusterIP
  selector:
    app: actions
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
